fix z-index

--- a/src/_/concat.block.less
+++ b/src/_/concat.block.less
@@ -1952,7 +1952,7 @@ textarea.form__control{height: 150px;}
 	}
 	&preview{
 		position: absolute;
-		z-index: 1;
+		z-index: -1;
 		background-repeat: no-repeat;
 		background-size: contain;
 		background-position: center;
