--- a/src/block/site/default/page-panel/.less
+++ b/src/block/site/default/page-panel/.less
@@ -43,7 +43,7 @@
 	}
 	&preview{
 		position: absolute;
-		z-index: 1;
+		z-index: -1;
 		background-repeat: no-repeat;
 		background-size: contain;
 		background-position: center;
